# Lexaire

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh
common/: config.yaml
include/: monitor.hpp  qgc_bridge.hpp
relay/: Dockerfile  docker-compose.yaml  start-relay.sh
src/: main.cpp  monitor.cpp  qgc_bridge.cpp
